[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/UI/dialogue-bubble.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/faceset-box.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Faceset/AldeaMirtha.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Exo-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/GUI/DialogueContainer.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 5
font_data = ExtResource( 4 )

[node name="DialogueContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -50.0
margin_right = 108.0
margin_bottom = -10.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FaceBox" type="TextureRect" parent="DialogueBox"]
anchor_left = 0.088
anchor_top = 0.5
anchor_right = 0.088
anchor_bottom = 0.5
margin_left = -12.008
margin_top = -12.0
margin_right = 11.992
margin_bottom = 12.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageRect" type="TextureRect" parent="DialogueBox/FaceBox"]
anchor_left = 0.125
anchor_top = 0.125
anchor_right = 0.875
anchor_bottom = 0.875
margin_right = -1.90735e-06
margin_bottom = -1.90735e-06
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="DialogueBox"]
margin_left = 34.0
margin_top = 6.0
margin_right = 130.0
margin_bottom = 22.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Teste"
text = "Teste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="DialogueBox"]
margin_left = 34.0
margin_top = 17.0
margin_right = 208.0
margin_bottom = 34.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
